proyecto-final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr finins
Rule 5     instruccion -> declaracion_instr finins
Rule 6     instruccion -> asignacion_instr finins
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> while_instr
Rule 9     instruccion -> break_instr finins
Rule 10    instruccion -> main_instr
Rule 11    instruccion -> funcion_instr
Rule 12    instruccion -> llamada_instr finins
Rule 13    instruccion -> return_instr finins
Rule 14    instruccion -> declArr_instr finins
Rule 15    instruccion -> modArr_instr finins
Rule 16    finins -> PUNTOCOMA
Rule 17    finins -> <empty>
Rule 18    instruccion -> error PUNTOCOMA
Rule 19    imprimir_instr -> RPRINT PARA expresion PARC
Rule 20    declaracion_instr -> tipo ID IGUAL expresion
Rule 21    declArr_instr -> tipo1
Rule 22    tipo1 -> tipo lista_Dim ID IGUAL RNEW tipo lista_expresiones
Rule 23    lista_Dim -> lista_Dim CORA CORC
Rule 24    lista_Dim -> CORA CORC
Rule 25    lista_expresiones -> lista_expresiones CORA expresion CORC
Rule 26    lista_expresiones -> CORA expresion CORC
Rule 27    modArr_instr -> ID lista_expresiones IGUAL expresion
Rule 28    asignacion_instr -> ID IGUAL expresion
Rule 29    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 30    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
Rule 31    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
Rule 32    while_instr -> RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 33    break_instr -> RBREAK
Rule 34    main_instr -> RMAIN PARA PARC LLAVEA instrucciones LLAVEC
Rule 35    funcion_instr -> RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
Rule 36    funcion_instr -> RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
Rule 37    parametros -> parametros COMA parametro
Rule 38    parametros -> parametro
Rule 39    parametro -> tipo ID
Rule 40    llamada_instr -> ID PARA PARC
Rule 41    llamada_instr -> ID PARA parametros_llamada PARC
Rule 42    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 43    parametros_llamada -> parametro_llamada
Rule 44    parametro_llamada -> expresion
Rule 45    return_instr -> RRETURN expresion
Rule 46    tipo -> RINT
Rule 47    tipo -> RFLOAT
Rule 48    tipo -> RSTRING
Rule 49    tipo -> RBOOLEAN
Rule 50    expresion -> expresion MAS expresion
Rule 51    expresion -> expresion MENOS expresion
Rule 52    expresion -> expresion POR expresion
Rule 53    expresion -> expresion MENORQUE expresion
Rule 54    expresion -> expresion MAYORQUE expresion
Rule 55    expresion -> expresion IGUALIGUAL expresion
Rule 56    expresion -> expresion AND expresion
Rule 57    expresion -> expresion OR expresion
Rule 58    expresion -> MENOS expresion
Rule 59    expresion -> NOT expresion
Rule 60    expresion -> PARA expresion PARC
Rule 61    expresion -> llamada_instr
Rule 62    expresion -> ID
Rule 63    expresion -> ENTERO
Rule 64    expresion -> DECIMAL
Rule 65    expresion -> CADENA
Rule 66    expresion -> RTRUE
Rule 67    expresion -> RFALSE
Rule 68    expresion -> RREAD PARA PARC
Rule 69    expresion -> PARA tipo PARC expresion
Rule 70    expresion -> ID lista_expresiones

Terminals, with rules where they appear

AND                  : 56
CADENA               : 65
COMA                 : 37 42
CORA                 : 23 24 25 26
CORC                 : 23 24 25 26
DECIMAL              : 64
ENTERO               : 63
ID                   : 20 22 27 28 35 36 39 40 41 62 70
IGUAL                : 20 22 27 28
IGUALIGUAL           : 55
LLAVEA               : 29 30 30 31 32 34 35 36
LLAVEC               : 29 30 30 31 32 34 35 36
MAS                  : 50
MAYORQUE             : 54
MENORQUE             : 53
MENOS                : 51 58
NOT                  : 59
OR                   : 57
PARA                 : 19 29 30 31 32 34 35 36 40 41 60 68 69
PARC                 : 19 29 30 31 32 34 35 36 40 41 60 68 69
POR                  : 52
PUNTOCOMA            : 16 18
RBOOLEAN             : 49
RBREAK               : 33
RELSE                : 30 31
RFALSE               : 67
RFLOAT               : 47
RFUNC                : 35 36
RIF                  : 29 30 31
RINT                 : 46
RMAIN                : 34
RNEW                 : 22
RPRINT               : 19
RREAD                : 68
RRETURN              : 45
RSTRING              : 48
RTRUE                : 66
RWHILE               : 32
error                : 18

Nonterminals, with rules where they appear

asignacion_instr     : 6
break_instr          : 9
declArr_instr        : 14
declaracion_instr    : 5
expresion            : 19 20 25 26 27 28 29 30 31 32 44 45 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 59 60 69
finins               : 4 5 6 9 12 13 14 15
funcion_instr        : 11
if_instr             : 7 31
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 29 30 30 31 32 34 35 36
lista_Dim            : 22 23
lista_expresiones    : 22 25 27 70
llamada_instr        : 12 61
main_instr           : 10
modArr_instr         : 15
parametro            : 37 38
parametro_llamada    : 42 43
parametros           : 35 37
parametros_llamada   : 41 42
return_instr         : 13
tipo                 : 20 22 22 39 69
tipo1                : 21
while_instr          : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (7) instruccion -> . if_instr
    (8) instruccion -> . while_instr
    (9) instruccion -> . break_instr finins
    (10) instruccion -> . main_instr
    (11) instruccion -> . funcion_instr
    (12) instruccion -> . llamada_instr finins
    (13) instruccion -> . return_instr finins
    (14) instruccion -> . declArr_instr finins
    (15) instruccion -> . modArr_instr finins
    (18) instruccion -> . error PUNTOCOMA
    (19) imprimir_instr -> . RPRINT PARA expresion PARC
    (20) declaracion_instr -> . tipo ID IGUAL expresion
    (28) asignacion_instr -> . ID IGUAL expresion
    (29) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (30) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (31) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (32) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (33) break_instr -> . RBREAK
    (34) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (35) funcion_instr -> . RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (36) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (40) llamada_instr -> . ID PARA PARC
    (41) llamada_instr -> . ID PARA parametros_llamada PARC
    (45) return_instr -> . RRETURN expresion
    (21) declArr_instr -> . tipo1
    (27) modArr_instr -> . ID lista_expresiones IGUAL expresion
    (46) tipo -> . RINT
    (47) tipo -> . RFLOAT
    (48) tipo -> . RSTRING
    (49) tipo -> . RBOOLEAN
    (22) tipo1 -> . tipo lista_Dim ID IGUAL RNEW tipo lista_expresiones

    error           shift and go to state 16
    RPRINT          shift and go to state 17
    ID              shift and go to state 19
    RIF             shift and go to state 20
    RWHILE          shift and go to state 21
    RBREAK          shift and go to state 22
    RMAIN           shift and go to state 23
    RFUNC           shift and go to state 24
    RRETURN         shift and go to state 25
    RINT            shift and go to state 27
    RFLOAT          shift and go to state 28
    RSTRING         shift and go to state 29
    RBOOLEAN        shift and go to state 30

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    break_instr                    shift and go to state 9
    main_instr                     shift and go to state 10
    funcion_instr                  shift and go to state 11
    llamada_instr                  shift and go to state 12
    return_instr                   shift and go to state 13
    declArr_instr                  shift and go to state 14
    modArr_instr                   shift and go to state 15
    tipo                           shift and go to state 18
    tipo1                          shift and go to state 26

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (7) instruccion -> . if_instr
    (8) instruccion -> . while_instr
    (9) instruccion -> . break_instr finins
    (10) instruccion -> . main_instr
    (11) instruccion -> . funcion_instr
    (12) instruccion -> . llamada_instr finins
    (13) instruccion -> . return_instr finins
    (14) instruccion -> . declArr_instr finins
    (15) instruccion -> . modArr_instr finins
    (18) instruccion -> . error PUNTOCOMA
    (19) imprimir_instr -> . RPRINT PARA expresion PARC
    (20) declaracion_instr -> . tipo ID IGUAL expresion
    (28) asignacion_instr -> . ID IGUAL expresion
    (29) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (30) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (31) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (32) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (33) break_instr -> . RBREAK
    (34) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (35) funcion_instr -> . RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (36) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (40) llamada_instr -> . ID PARA PARC
    (41) llamada_instr -> . ID PARA parametros_llamada PARC
    (45) return_instr -> . RRETURN expresion
    (21) declArr_instr -> . tipo1
    (27) modArr_instr -> . ID lista_expresiones IGUAL expresion
    (46) tipo -> . RINT
    (47) tipo -> . RFLOAT
    (48) tipo -> . RSTRING
    (49) tipo -> . RBOOLEAN
    (22) tipo1 -> . tipo lista_Dim ID IGUAL RNEW tipo lista_expresiones

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 16
    RPRINT          shift and go to state 17
    ID              shift and go to state 19
    RIF             shift and go to state 20
    RWHILE          shift and go to state 21
    RBREAK          shift and go to state 22
    RMAIN           shift and go to state 23
    RFUNC           shift and go to state 24
    RRETURN         shift and go to state 25
    RINT            shift and go to state 27
    RFLOAT          shift and go to state 28
    RSTRING         shift and go to state 29
    RBOOLEAN        shift and go to state 30

    instruccion                    shift and go to state 31
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    break_instr                    shift and go to state 9
    main_instr                     shift and go to state 10
    funcion_instr                  shift and go to state 11
    llamada_instr                  shift and go to state 12
    return_instr                   shift and go to state 13
    declArr_instr                  shift and go to state 14
    modArr_instr                   shift and go to state 15
    tipo                           shift and go to state 18
    tipo1                          shift and go to state 26

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RMAIN           reduce using rule 3 (instrucciones -> instruccion .)
    RFUNC           reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RINT            reduce using rule 3 (instrucciones -> instruccion .)
    RFLOAT          reduce using rule 3 (instrucciones -> instruccion .)
    RSTRING         reduce using rule 3 (instrucciones -> instruccion .)
    RBOOLEAN        reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . finins
    (16) finins -> . PUNTOCOMA
    (17) finins -> .

    PUNTOCOMA       shift and go to state 33
    error           reduce using rule 17 (finins -> .)
    RPRINT          reduce using rule 17 (finins -> .)
    ID              reduce using rule 17 (finins -> .)
    RIF             reduce using rule 17 (finins -> .)
    RWHILE          reduce using rule 17 (finins -> .)
    RBREAK          reduce using rule 17 (finins -> .)
    RMAIN           reduce using rule 17 (finins -> .)
    RFUNC           reduce using rule 17 (finins -> .)
    RRETURN         reduce using rule 17 (finins -> .)
    RINT            reduce using rule 17 (finins -> .)
    RFLOAT          reduce using rule 17 (finins -> .)
    RSTRING         reduce using rule 17 (finins -> .)
    RBOOLEAN        reduce using rule 17 (finins -> .)
    $end            reduce using rule 17 (finins -> .)
    LLAVEC          reduce using rule 17 (finins -> .)

    finins                         shift and go to state 32

state 5

    (5) instruccion -> declaracion_instr . finins
    (16) finins -> . PUNTOCOMA
    (17) finins -> .

    PUNTOCOMA       shift and go to state 33
    error           reduce using rule 17 (finins -> .)
    RPRINT          reduce using rule 17 (finins -> .)
    ID              reduce using rule 17 (finins -> .)
    RIF             reduce using rule 17 (finins -> .)
    RWHILE          reduce using rule 17 (finins -> .)
    RBREAK          reduce using rule 17 (finins -> .)
    RMAIN           reduce using rule 17 (finins -> .)
    RFUNC           reduce using rule 17 (finins -> .)
    RRETURN         reduce using rule 17 (finins -> .)
    RINT            reduce using rule 17 (finins -> .)
    RFLOAT          reduce using rule 17 (finins -> .)
    RSTRING         reduce using rule 17 (finins -> .)
    RBOOLEAN        reduce using rule 17 (finins -> .)
    $end            reduce using rule 17 (finins -> .)
    LLAVEC          reduce using rule 17 (finins -> .)

    finins                         shift and go to state 34

state 6

    (6) instruccion -> asignacion_instr . finins
    (16) finins -> . PUNTOCOMA
    (17) finins -> .

    PUNTOCOMA       shift and go to state 33
    error           reduce using rule 17 (finins -> .)
    RPRINT          reduce using rule 17 (finins -> .)
    ID              reduce using rule 17 (finins -> .)
    RIF             reduce using rule 17 (finins -> .)
    RWHILE          reduce using rule 17 (finins -> .)
    RBREAK          reduce using rule 17 (finins -> .)
    RMAIN           reduce using rule 17 (finins -> .)
    RFUNC           reduce using rule 17 (finins -> .)
    RRETURN         reduce using rule 17 (finins -> .)
    RINT            reduce using rule 17 (finins -> .)
    RFLOAT          reduce using rule 17 (finins -> .)
    RSTRING         reduce using rule 17 (finins -> .)
    RBOOLEAN        reduce using rule 17 (finins -> .)
    $end            reduce using rule 17 (finins -> .)
    LLAVEC          reduce using rule 17 (finins -> .)

    finins                         shift and go to state 35

state 7

    (7) instruccion -> if_instr .

    error           reduce using rule 7 (instruccion -> if_instr .)
    RPRINT          reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    RIF             reduce using rule 7 (instruccion -> if_instr .)
    RWHILE          reduce using rule 7 (instruccion -> if_instr .)
    RBREAK          reduce using rule 7 (instruccion -> if_instr .)
    RMAIN           reduce using rule 7 (instruccion -> if_instr .)
    RFUNC           reduce using rule 7 (instruccion -> if_instr .)
    RRETURN         reduce using rule 7 (instruccion -> if_instr .)
    RINT            reduce using rule 7 (instruccion -> if_instr .)
    RFLOAT          reduce using rule 7 (instruccion -> if_instr .)
    RSTRING         reduce using rule 7 (instruccion -> if_instr .)
    RBOOLEAN        reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVEC          reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> while_instr .

    error           reduce using rule 8 (instruccion -> while_instr .)
    RPRINT          reduce using rule 8 (instruccion -> while_instr .)
    ID              reduce using rule 8 (instruccion -> while_instr .)
    RIF             reduce using rule 8 (instruccion -> while_instr .)
    RWHILE          reduce using rule 8 (instruccion -> while_instr .)
    RBREAK          reduce using rule 8 (instruccion -> while_instr .)
    RMAIN           reduce using rule 8 (instruccion -> while_instr .)
    RFUNC           reduce using rule 8 (instruccion -> while_instr .)
    RRETURN         reduce using rule 8 (instruccion -> while_instr .)
    RINT            reduce using rule 8 (instruccion -> while_instr .)
    RFLOAT          reduce using rule 8 (instruccion -> while_instr .)
    RSTRING         reduce using rule 8 (instruccion -> while_instr .)
    RBOOLEAN        reduce using rule 8 (instruccion -> while_instr .)
    $end            reduce using rule 8 (instruccion -> while_instr .)
    LLAVEC          reduce using rule 8 (instruccion -> while_instr .)


state 9

    (9) instruccion -> break_instr . finins
    (16) finins -> . PUNTOCOMA
    (17) finins -> .

    PUNTOCOMA       shift and go to state 33
    error           reduce using rule 17 (finins -> .)
    RPRINT          reduce using rule 17 (finins -> .)
    ID              reduce using rule 17 (finins -> .)
    RIF             reduce using rule 17 (finins -> .)
    RWHILE          reduce using rule 17 (finins -> .)
    RBREAK          reduce using rule 17 (finins -> .)
    RMAIN           reduce using rule 17 (finins -> .)
    RFUNC           reduce using rule 17 (finins -> .)
    RRETURN         reduce using rule 17 (finins -> .)
    RINT            reduce using rule 17 (finins -> .)
    RFLOAT          reduce using rule 17 (finins -> .)
    RSTRING         reduce using rule 17 (finins -> .)
    RBOOLEAN        reduce using rule 17 (finins -> .)
    $end            reduce using rule 17 (finins -> .)
    LLAVEC          reduce using rule 17 (finins -> .)

    finins                         shift and go to state 36

state 10

    (10) instruccion -> main_instr .

    error           reduce using rule 10 (instruccion -> main_instr .)
    RPRINT          reduce using rule 10 (instruccion -> main_instr .)
    ID              reduce using rule 10 (instruccion -> main_instr .)
    RIF             reduce using rule 10 (instruccion -> main_instr .)
    RWHILE          reduce using rule 10 (instruccion -> main_instr .)
    RBREAK          reduce using rule 10 (instruccion -> main_instr .)
    RMAIN           reduce using rule 10 (instruccion -> main_instr .)
    RFUNC           reduce using rule 10 (instruccion -> main_instr .)
    RRETURN         reduce using rule 10 (instruccion -> main_instr .)
    RINT            reduce using rule 10 (instruccion -> main_instr .)
    RFLOAT          reduce using rule 10 (instruccion -> main_instr .)
    RSTRING         reduce using rule 10 (instruccion -> main_instr .)
    RBOOLEAN        reduce using rule 10 (instruccion -> main_instr .)
    $end            reduce using rule 10 (instruccion -> main_instr .)
    LLAVEC          reduce using rule 10 (instruccion -> main_instr .)


state 11

    (11) instruccion -> funcion_instr .

    error           reduce using rule 11 (instruccion -> funcion_instr .)
    RPRINT          reduce using rule 11 (instruccion -> funcion_instr .)
    ID              reduce using rule 11 (instruccion -> funcion_instr .)
    RIF             reduce using rule 11 (instruccion -> funcion_instr .)
    RWHILE          reduce using rule 11 (instruccion -> funcion_instr .)
    RBREAK          reduce using rule 11 (instruccion -> funcion_instr .)
    RMAIN           reduce using rule 11 (instruccion -> funcion_instr .)
    RFUNC           reduce using rule 11 (instruccion -> funcion_instr .)
    RRETURN         reduce using rule 11 (instruccion -> funcion_instr .)
    RINT            reduce using rule 11 (instruccion -> funcion_instr .)
    RFLOAT          reduce using rule 11 (instruccion -> funcion_instr .)
    RSTRING         reduce using rule 11 (instruccion -> funcion_instr .)
    RBOOLEAN        reduce using rule 11 (instruccion -> funcion_instr .)
    $end            reduce using rule 11 (instruccion -> funcion_instr .)
    LLAVEC          reduce using rule 11 (instruccion -> funcion_instr .)


state 12

    (12) instruccion -> llamada_instr . finins
    (16) finins -> . PUNTOCOMA
    (17) finins -> .

    PUNTOCOMA       shift and go to state 33
    error           reduce using rule 17 (finins -> .)
    RPRINT          reduce using rule 17 (finins -> .)
    ID              reduce using rule 17 (finins -> .)
    RIF             reduce using rule 17 (finins -> .)
    RWHILE          reduce using rule 17 (finins -> .)
    RBREAK          reduce using rule 17 (finins -> .)
    RMAIN           reduce using rule 17 (finins -> .)
    RFUNC           reduce using rule 17 (finins -> .)
    RRETURN         reduce using rule 17 (finins -> .)
    RINT            reduce using rule 17 (finins -> .)
    RFLOAT          reduce using rule 17 (finins -> .)
    RSTRING         reduce using rule 17 (finins -> .)
    RBOOLEAN        reduce using rule 17 (finins -> .)
    $end            reduce using rule 17 (finins -> .)
    LLAVEC          reduce using rule 17 (finins -> .)

    finins                         shift and go to state 37

state 13

    (13) instruccion -> return_instr . finins
    (16) finins -> . PUNTOCOMA
    (17) finins -> .

    PUNTOCOMA       shift and go to state 33
    error           reduce using rule 17 (finins -> .)
    RPRINT          reduce using rule 17 (finins -> .)
    ID              reduce using rule 17 (finins -> .)
    RIF             reduce using rule 17 (finins -> .)
    RWHILE          reduce using rule 17 (finins -> .)
    RBREAK          reduce using rule 17 (finins -> .)
    RMAIN           reduce using rule 17 (finins -> .)
    RFUNC           reduce using rule 17 (finins -> .)
    RRETURN         reduce using rule 17 (finins -> .)
    RINT            reduce using rule 17 (finins -> .)
    RFLOAT          reduce using rule 17 (finins -> .)
    RSTRING         reduce using rule 17 (finins -> .)
    RBOOLEAN        reduce using rule 17 (finins -> .)
    $end            reduce using rule 17 (finins -> .)
    LLAVEC          reduce using rule 17 (finins -> .)

    finins                         shift and go to state 38

state 14

    (14) instruccion -> declArr_instr . finins
    (16) finins -> . PUNTOCOMA
    (17) finins -> .

    PUNTOCOMA       shift and go to state 33
    error           reduce using rule 17 (finins -> .)
    RPRINT          reduce using rule 17 (finins -> .)
    ID              reduce using rule 17 (finins -> .)
    RIF             reduce using rule 17 (finins -> .)
    RWHILE          reduce using rule 17 (finins -> .)
    RBREAK          reduce using rule 17 (finins -> .)
    RMAIN           reduce using rule 17 (finins -> .)
    RFUNC           reduce using rule 17 (finins -> .)
    RRETURN         reduce using rule 17 (finins -> .)
    RINT            reduce using rule 17 (finins -> .)
    RFLOAT          reduce using rule 17 (finins -> .)
    RSTRING         reduce using rule 17 (finins -> .)
    RBOOLEAN        reduce using rule 17 (finins -> .)
    $end            reduce using rule 17 (finins -> .)
    LLAVEC          reduce using rule 17 (finins -> .)

    finins                         shift and go to state 39

state 15

    (15) instruccion -> modArr_instr . finins
    (16) finins -> . PUNTOCOMA
    (17) finins -> .

    PUNTOCOMA       shift and go to state 33
    error           reduce using rule 17 (finins -> .)
    RPRINT          reduce using rule 17 (finins -> .)
    ID              reduce using rule 17 (finins -> .)
    RIF             reduce using rule 17 (finins -> .)
    RWHILE          reduce using rule 17 (finins -> .)
    RBREAK          reduce using rule 17 (finins -> .)
    RMAIN           reduce using rule 17 (finins -> .)
    RFUNC           reduce using rule 17 (finins -> .)
    RRETURN         reduce using rule 17 (finins -> .)
    RINT            reduce using rule 17 (finins -> .)
    RFLOAT          reduce using rule 17 (finins -> .)
    RSTRING         reduce using rule 17 (finins -> .)
    RBOOLEAN        reduce using rule 17 (finins -> .)
    $end            reduce using rule 17 (finins -> .)
    LLAVEC          reduce using rule 17 (finins -> .)

    finins                         shift and go to state 40

state 16

    (18) instruccion -> error . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41


state 17

    (19) imprimir_instr -> RPRINT . PARA expresion PARC

    PARA            shift and go to state 42


state 18

    (20) declaracion_instr -> tipo . ID IGUAL expresion
    (22) tipo1 -> tipo . lista_Dim ID IGUAL RNEW tipo lista_expresiones
    (23) lista_Dim -> . lista_Dim CORA CORC
    (24) lista_Dim -> . CORA CORC

    ID              shift and go to state 43
    CORA            shift and go to state 45

    lista_Dim                      shift and go to state 44

state 19

    (28) asignacion_instr -> ID . IGUAL expresion
    (40) llamada_instr -> ID . PARA PARC
    (41) llamada_instr -> ID . PARA parametros_llamada PARC
    (27) modArr_instr -> ID . lista_expresiones IGUAL expresion
    (25) lista_expresiones -> . lista_expresiones CORA expresion CORC
    (26) lista_expresiones -> . CORA expresion CORC

    IGUAL           shift and go to state 46
    PARA            shift and go to state 47
    CORA            shift and go to state 49

    lista_expresiones              shift and go to state 48

state 20

    (29) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC
    (30) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (31) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr

    PARA            shift and go to state 50


state 21

    (32) while_instr -> RWHILE . PARA expresion PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 51


state 22

    (33) break_instr -> RBREAK .

    PUNTOCOMA       reduce using rule 33 (break_instr -> RBREAK .)
    error           reduce using rule 33 (break_instr -> RBREAK .)
    RPRINT          reduce using rule 33 (break_instr -> RBREAK .)
    ID              reduce using rule 33 (break_instr -> RBREAK .)
    RIF             reduce using rule 33 (break_instr -> RBREAK .)
    RWHILE          reduce using rule 33 (break_instr -> RBREAK .)
    RBREAK          reduce using rule 33 (break_instr -> RBREAK .)
    RMAIN           reduce using rule 33 (break_instr -> RBREAK .)
    RFUNC           reduce using rule 33 (break_instr -> RBREAK .)
    RRETURN         reduce using rule 33 (break_instr -> RBREAK .)
    RINT            reduce using rule 33 (break_instr -> RBREAK .)
    RFLOAT          reduce using rule 33 (break_instr -> RBREAK .)
    RSTRING         reduce using rule 33 (break_instr -> RBREAK .)
    RBOOLEAN        reduce using rule 33 (break_instr -> RBREAK .)
    $end            reduce using rule 33 (break_instr -> RBREAK .)
    LLAVEC          reduce using rule 33 (break_instr -> RBREAK .)


state 23

    (34) main_instr -> RMAIN . PARA PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 52


state 24

    (35) funcion_instr -> RFUNC . ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (36) funcion_instr -> RFUNC . ID PARA PARC LLAVEA instrucciones LLAVEC

    ID              shift and go to state 53


state 25

    (45) return_instr -> RRETURN . expresion
    (50) expresion -> . expresion MAS expresion
    (51) expresion -> . expresion MENOS expresion
    (52) expresion -> . expresion POR expresion
    (53) expresion -> . expresion MENORQUE expresion
    (54) expresion -> . expresion MAYORQUE expresion
    (55) expresion -> . expresion IGUALIGUAL expresion
    (56) expresion -> . expresion AND expresion
    (57) expresion -> . expresion OR expresion
    (58) expresion -> . MENOS expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . PARA expresion PARC
    (61) expresion -> . llamada_instr
    (62) expresion -> . ID
    (63) expresion -> . ENTERO
    (64) expresion -> . DECIMAL
    (65) expresion -> . CADENA
    (66) expresion -> . RTRUE
    (67) expresion -> . RFALSE
    (68) expresion -> . RREAD PARA PARC
    (69) expresion -> . PARA tipo PARC expresion
    (70) expresion -> . ID lista_expresiones
    (40) llamada_instr -> . ID PARA PARC
    (41) llamada_instr -> . ID PARA parametros_llamada PARC

    MENOS           shift and go to state 55
    NOT             shift and go to state 56
    PARA            shift and go to state 57
    ID              shift and go to state 59
    ENTERO          shift and go to state 60
    DECIMAL         shift and go to state 61
    CADENA          shift and go to state 62
    RTRUE           shift and go to state 63
    RFALSE          shift and go to state 64
    RREAD           shift and go to state 65

    expresion                      shift and go to state 54
    llamada_instr                  shift and go to state 58

state 26

    (21) declArr_instr -> tipo1 .

    PUNTOCOMA       reduce using rule 21 (declArr_instr -> tipo1 .)
    error           reduce using rule 21 (declArr_instr -> tipo1 .)
    RPRINT          reduce using rule 21 (declArr_instr -> tipo1 .)
    ID              reduce using rule 21 (declArr_instr -> tipo1 .)
    RIF             reduce using rule 21 (declArr_instr -> tipo1 .)
    RWHILE          reduce using rule 21 (declArr_instr -> tipo1 .)
    RBREAK          reduce using rule 21 (declArr_instr -> tipo1 .)
    RMAIN           reduce using rule 21 (declArr_instr -> tipo1 .)
    RFUNC           reduce using rule 21 (declArr_instr -> tipo1 .)
    RRETURN         reduce using rule 21 (declArr_instr -> tipo1 .)
    RINT            reduce using rule 21 (declArr_instr -> tipo1 .)
    RFLOAT          reduce using rule 21 (declArr_instr -> tipo1 .)
    RSTRING         reduce using rule 21 (declArr_instr -> tipo1 .)
    RBOOLEAN        reduce using rule 21 (declArr_instr -> tipo1 .)
    $end            reduce using rule 21 (declArr_instr -> tipo1 .)
    LLAVEC          reduce using rule 21 (declArr_instr -> tipo1 .)


state 27

    (46) tipo -> RINT .

    ID              reduce using rule 46 (tipo -> RINT .)
    CORA            reduce using rule 46 (tipo -> RINT .)
    PARC            reduce using rule 46 (tipo -> RINT .)


state 28

    (47) tipo -> RFLOAT .

    ID              reduce using rule 47 (tipo -> RFLOAT .)
    CORA            reduce using rule 47 (tipo -> RFLOAT .)
    PARC            reduce using rule 47 (tipo -> RFLOAT .)


state 29

    (48) tipo -> RSTRING .

    ID              reduce using rule 48 (tipo -> RSTRING .)
    CORA            reduce using rule 48 (tipo -> RSTRING .)
    PARC            reduce using rule 48 (tipo -> RSTRING .)


state 30

    (49) tipo -> RBOOLEAN .

    ID              reduce using rule 49 (tipo -> RBOOLEAN .)
    CORA            reduce using rule 49 (tipo -> RBOOLEAN .)
    PARC            reduce using rule 49 (tipo -> RBOOLEAN .)


state 31

    (2) instrucciones -> instrucciones instruccion .
